--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
-@import url("reset.css");
-@import url("fonts.css");
-@import url("global.css");
-@import url("layout/header.css");
-@import url("layout/main.css");
-@import url("layout/footer.css");
-@import url("layout/home.css");
-@import url("layout/about.css");
+@import url("./reset.css");
+@import url("./fonts.css");
+@import url("./global.css");
+@import url("./layout/header.css");
+@import url("./layout/main.css");
+@import url("./layout/footer.css");
+@import url("./layout/home.css");
+@import url("./layout/about.css");
