--- a/assets/css/layout/about.css
+++ b/assets/css/layout/about.css
@@ -84,7 +84,8 @@
   justify-content: space-between;
 }
 
-#education {
+#education,
+#experience {
   display: flex;
   flex-direction: column;
   gap: 1rem;
