--- a/assets/css/layout/home.css
+++ b/assets/css/layout/home.css
@@ -1,4 +1,5 @@
 #home {
+  position: relative;
   display: flex;
   justify-content: space-between;
 }
@@ -37,4 +38,55 @@
   height: 20rem;
   left: -80px;
   filter: saturate(0);
+}
+
+.apart p {
+  background-color: black;
+  color: white;
+  width: fit-content;
+}
+
+@media screen and (max-width: 768px) {
+  #home {
+    width: 100%;
+    box-sizing: border-box;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: start;
+    gap: 2rem;
+  }
+
+  #herotext {
+    width: 100%;
+  }
+
+  #heroimage-container {
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 400px;
+  }
+
+  #heroimage-container img {
+    scale: 1.2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .apart {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .apart p {
+    background-color: white;
+    font-weight: normal !important;
+    color: #808080;
+  }
+
+  #home h2 {
+    font-size: 1.6rem;
+  }
+  #home p {
+    font-size: 1.1rem;
+  }
 }
