--- a/assets/css/layout/main.css
+++ b/assets/css/layout/main.css
@@ -9,3 +9,13 @@ main {
   width: 100%;
   margin: auto;
 }
+
+@media screen and (max-width: 768px) {
+  main {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    max-width: 100vw;
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
