--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,4 +5,5 @@
 @import url("./layout/main.css");
 @import url("./layout/footer.css");
 @import url("./layout/home.css");
+@import url("./layout/projects.css");
 @import url("./layout/about.css");
