--- a/assets/css/layout/about.css
+++ b/assets/css/layout/about.css
@@ -56,6 +56,12 @@
   gap: 1rem;
 }
 
+.apart p {
+  background-color: black;
+  color: white;
+  width: fit-content;
+}
+
 #about-image-container {
   position: relative;
   overflow: hidden;
