header and dropdown adjusted for mobile

--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -48,9 +48,14 @@ header nav ul li a:hover {
 
 @media screen and (max-width: 768px) {
   header {
+    position: fixed;
+    top: 0;
+    height: 4rem;
+    background-color: white;
     box-sizing: border-box;
     padding-left: 1rem;
     padding-right: 1rem;
+    z-index: 1000;
   }
 
   #navbar {
