--- a/assets/css/layout/main.css
+++ b/assets/css/layout/main.css
@@ -12,6 +12,7 @@ main {
 
 @media screen and (max-width: 768px) {
   main {
+    margin-top: 4rem;
     padding-left: 1rem;
     padding-right: 1rem;
     max-width: 100vw;
