--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -48,7 +48,7 @@ header nav ul li a:hover {
 
 @media screen and (max-width: 768px) {
   header {
-    position: fixed;
+    position: sticky;
     top: 0;
     height: 4rem;
     background-color: white;
