--- a/assets/css/layout/about.css
+++ b/assets/css/layout/about.css
@@ -13,6 +13,11 @@
 
 .stack-bar svg {
   height: 3rem;
+  transition: 0.3s;
+}
+
+.stack-bar svg:hover {
+  fill: #ea1414;
 }
 
 #about h2 {
@@ -112,6 +117,21 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+}
+
+@keyframes wave {
+  0%,
+  100% {
+    transform: rotate(-20deg);
+  }
+  50% {
+    transform: rotate(30deg);
+  }
+}
+
+.hand {
+  display: inline-block;
+  animation: wave 1.5s infinite ease-in-out;
 }
 
 @media screen and (max-width: 768px) {
